# Research

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
notebooks/: qiskit_demo.ipynb
src/surface_code_sim/: __init__.py  cli.py  plotting.py  profiling.py
src/surface_code_sim/decoders/: __init__.py  local.py  mwpm.py
src/surface_code_sim/experiments/: __init__.py  presets.py
src/surface_code_sim/qiskit_frontend/: __init__.py  circuit.py  layout.py  noise.py  sampler.py
src/surface_code_sim/stim_backend/: __init__.py  circuit.py  sampler.py
src/surface_code_sim/utils/: __init__.py  config.py  git.py  seed.py
tests/: test_cli_sweep.py  test_config.py  test_local_decoder.py  test_mwpm_decoder.py  test_noise.py  test_plotting.py  test_qiskit_frontend.py  test_sampler.py  test_seed.py  test_stim_sampler.py
